<resources>
    <string name="app_name">Screen Checker</string>
    <string name="info_resolution_px">(px)</string>
    <string name="info_resolution_dp">(dp)</string>
    <string name="info_device_resolution">Device Resolution</string>
    <string name="info_current_resolution">Current Resolution</string>
    <string name="info_app_resolution">App Resolution</string>
    <string name="info_dpi">DPI</string>
    <string name="info_rotation">Rotation</string>
    <string name="info_size">Size</string>
    <string name="info_density">Density</string>
    <string name="info_layout">Layout</string>
    <string name="info_ui_mode">UI Mode</string>
    <string name="info_color_mode">Color Mode</string>
    <string name="info_hdr_type">HDR Type</string>
    <string name="info_multitouch">Multitouch</string>
    <string name="info_current_display">Current Display</string>
    <string name="info_supported_display_mode">Supported Display Mode</string>
    <string name="empty_info">-</string>
</resources>
